--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "webpack-dev-server": "^3.5.0"
   },
   "dependencies": {
+    "@types/gsap": "^1.20.2",
     "@types/pixi.js": "^4.8.7",
+    "eventemitter3-timer": "^1.0.1",
+    "gsap": "^2.1.3",
     "lodash": "^4.17.11",
-    "pixi.js": "^5.0.3"
+    "pixi.js": "^4.8.7"
   }
 }
